--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
+    "apollo-meteor-integration": "github:meteor/apollo",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-dotenv": "^3.3.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-reanimated": "^2.6.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   },
