--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "styled-components": "^5.3.5",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   },
