--- a/ios/weatherPeople/Info.plist
+++ b/ios/weatherPeople/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -37,6 +39,22 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string></string>
+		<string>fonts/SUIT-Bold.ttf</string>
+		<string>fonts/SUIT-ExtraBold.ttf</string>
+		<string>fonts/SUIT-ExtraLight.ttf</string>
+		<string>fonts/SUIT-Heavy.ttf</string>
+		<string>fonts/SUIT-Light.ttf</string>
+		<string>fonts/SUIT-Medium.ttf</string>
+		<string>fonts/SUIT-Regular.ttf</string>
+		<string>fonts/SUIT-SemiBold.ttf</string>
+		<string>fonts/SUIT-Thin.ttf</string>
+		<string>fonts/YdestreetB.ttf</string>
+		<string>fonts/YdestreetL.ttf</string>
+		<string></string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -44,11 +62,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+	<array/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
