--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.5.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.69.1",
