--- a/ios/weatherPeople/Info.plist
+++ b/ios/weatherPeople/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
-	<string></string>
+	<string/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -38,10 +38,10 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
-		<string></string>
+		<string/>
 		<string>fonts/SUIT-Bold.ttf</string>
 		<string>fonts/SUIT-ExtraBold.ttf</string>
 		<string>fonts/SUIT-ExtraLight.ttf</string>
@@ -53,7 +53,8 @@
 		<string>fonts/SUIT-Thin.ttf</string>
 		<string>fonts/YdestreetB.ttf</string>
 		<string>fonts/YdestreetL.ttf</string>
-		<string></string>
+		<string>antfill.ttf</string>
+		<string>antoutline.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
