--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0-rc.3",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "xml-js": "^1.6.11",
