--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-picker": "^4.8.2",
     "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
