--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/react-native": "^5.0.0",
     "@apollo/client": "^3.5.10",
+    "@gorhom/bottom-sheet": "^4.2.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cameraroll": "^4.1.2",
@@ -28,8 +29,11 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-dotenv": "^3.3.1",
@@ -41,6 +45,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0-rc.3",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "xml-js": "^1.6.11",
