--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react": "^18.0.9",
+    "@types/react-native": "^0.67.7",
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.69.1",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.6.4"
   },
   "jest": {
     "preset": "react-native"
