--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ant-design/react-native": "^5.0.0",
     "@apollo/client": "^3.5.10",
     "@gorhom/bottom-sheet": "^4.2.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
@@ -40,6 +39,8 @@
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-picker": "^4.8.2",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
