--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-native": "^0.67.7",
+    "@types/react-native-modals": "^0.19.2",
+    "@types/react-native-popup-dialog": "^0.16.4",
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.12.0",
